feat(org-server): code improvements, refactor resources endpoint in RS
